syntax = "proto3";
package task;

service TaskService {
    rpc SubmitTask(TaskRequest) returns (TaskResponse);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message TaskRequest {
    string job_id = 1;
    int64 execution_time = 2;
}

message TaskResponse {
    string status = 1;
}

message HeartbeatRequest {
    int32 heartbeat = 1;
}

message HeartbeatResponse {
    bool alive = 1;
}